# oidn

./: AGENTS.md  CMakeLists.txt  CONTEXT.md  STARTUP.sh
api/: CMakeLists.txt  api.cpp
cmake/: oidn_wgpu.cmake
common/: oidn_utils.cpp  platform.h
core/: context.h
devices/: CMakeLists.txt
devices/webgpu/: CMakeLists.txt  webgpu_arena.cpp  webgpu_arena.h  webgpu_autoexposure.cpp  webgpu_autoexposure.h  webgpu_buffer.cpp  webgpu_buffer.h  webgpu_conv.cpp  webgpu_conv.h  webgpu_device.cpp  webgpu_device.h  webgpu_engine.cpp  webgpu_engine.h  webgpu_heap.cpp  webgpu_heap.h  webgpu_helper.cpp  webgpu_image_copy.cpp  webgpu_image_copy.h  webgpu_input_process.cpp  webgpu_input_process.h  webgpu_module.cpp  webgpu_output_process.cpp  webgpu_output_process.h  webgpu_pool.cpp  webgpu_pool.h  webgpu_tensor.h  webgpu_upsample.cpp  webgpu_upsample.h
devices/wgpu/: CMakeLists.txt  wgpuConv2d.c  wgpuIdentity.c
include/OpenImageDenoise/: config.h.in  oidn.h  oidn.hpp  webgpu.h
scripts/: test.py
tests/: CMakeLists.txt  test_main.cpp  test_webgpu_arena.cpp  test_webgpu_autoexposure.cpp  test_webgpu_conv.cpp  test_webgpu_eltwise.cpp  test_webgpu_eltwise_metal.cpp  test_webgpu_image_copy.cpp  test_webgpu_input_process.cpp  test_webgpu_output_process.cpp  test_webgpu_pool.cpp  test_webgpu_upsample.cpp
