find_package(GTest REQUIRED)

function(add_webgpu_test exe test_name source)
  add_executable(${exe} ${source} test_main.cpp)
  target_include_directories(${exe} PRIVATE ${PROJECT_SOURCE_DIR}/devices/webgpu)
  target_include_directories(${exe} PRIVATE ${PROJECT_SOURCE_DIR}/devices/cpu)
  target_include_directories(${exe} PRIVATE ${PROJECT_SOURCE_DIR})
  target_include_directories(${exe} PRIVATE ${OIDN_WGPU_DIR}/include)
  target_link_libraries(${exe} PRIVATE OpenImageDenoise OpenImageDenoise_core OpenImageDenoise_device_cpu OpenImageDenoise_device_webgpu GTest::GTest)
  add_test(NAME ${test_name} COMMAND ${exe})
  set_property(TEST ${test_name} PROPERTY SKIP_RETURN_CODE 77)
endfunction()

add_webgpu_test(webgpu_conv_test WebGPU.Conv2d test_webgpu_conv.cpp)
add_webgpu_test(webgpu_upsample_test WebGPU.Upsample test_webgpu_upsample.cpp)
add_webgpu_test(webgpu_pool_test WebGPU.Pool test_webgpu_pool.cpp)
add_webgpu_test(webgpu_input_process_test WebGPU.InputProcess test_webgpu_input_process.cpp)
add_webgpu_test(webgpu_output_process_test WebGPU.OutputProcess test_webgpu_output_process.cpp)
add_webgpu_test(webgpu_image_copy_test WebGPU.ImageCopy test_webgpu_image_copy.cpp)
add_webgpu_test(webgpu_autoexposure_test WebGPU.Autoexposure test_webgpu_autoexposure.cpp)
add_webgpu_test(webgpu_eltwise_test WebGPU.Eltwise test_webgpu_eltwise.cpp)
add_webgpu_test(webgpu_eltwise_metal_test WebGPU.EltwiseMetal test_webgpu_eltwise_metal.cpp)
if(TARGET OpenImageDenoise_device_metal)
  target_link_libraries(webgpu_eltwise_metal_test PRIVATE OpenImageDenoise_device_metal)
endif()
add_webgpu_test(webgpu_arena_test WebGPU.Arena test_webgpu_arena.cpp)
